--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"        
         android:name=".app.MyFilesApplication"
-        android:uiOptions="splitActionBarWhenNarrow">
+        android:uiOptions="splitActionBarWhenNarrow"
+        android:hardwareAccelerated="true">
         
         <meta-data android:name="com.samsung.android.sdk.multiwindow.enable" android:value="true"/>
     	<meta-data android:name="com.samsung.android.sdk.multiwindow.multiinstance.enable" android:value="true"/>
